src/main/java/com/example/springjpa/global/error/BusinessCommitException.java
package com.example.springjpa.global.error;

import lombok.extern.slf4j.Slf4j;

@Slf4j
public class BusinessCommitException extends Exception {

}
